<resources>
    <string name="app_name">ProyectoMovil</string>
    <string name="saludoMiPerfil">¡Hola</string>
    <string name="infoMiPerfil">Actualiza tu información con tus datos personales.</string>
    <string name="infoEditarMiPerfil">Edita tu información con tus datos personales actuales.</string>
    <string name="infoViajesComprados">Encuentra una lista con los viajes que has comprado.</string>
    <string name="infoEditarViajesComprados">Escribe el código del viaje que deseas eliminar.</string>
    <string name="tusDatos">Tus datos</string>
    <string name="nombre">Nombre:</string>
    <string name="correo">Correo:</string>
    <string name="telefono">Teléfono:</string>
    <string name="direccion">Dirección:</string>
    <string name="btnEditarPerfil">Editar información</string>
    <string name="btnGuardarPerfil">Guardar información</string>
    <string name="tusViajes">Tus viajes</string>
    <string name="btnCancelarViaje">Cancelar viaje</string>
    <string name="codigo">Código</string>
    <string name="buscarCodigo">Ingresa el código a buscar</string>
    <string name="viajeaCancelar">Viaje a cancelar:</string>
    <string name="tituloConfirmacion">¡Prepara las maletas!</string>
    <string name="confirmacionInfo">Esta es la confirmación de tu orden:</string>
    <string name="idViaje">ID Viaje:</string>
    <string name="destino">Destino:</string>
    <string name="transporte">Transporte:</string>
    <string name="fecha">Fecha:</string>
    <string name="dias">Días:</string>
    <string name="asientos">Asientos:</string>
    <string name="reservacion">Reservación a nombre de:</string>
    <string name="entendido">Entendido</string>
    <string name="text_begin">Inicia con tu teléfono celular</string>
    <string name="text_begin_2">Por favor, ingresa tu número de celular y contraseña correctamente</string>
    <string name="lada">+52</string>
    <string name="number">33 1234 6578</string>
    <string name="password">Contraseña</string>
    <string name="checkBox">Mantener sesión iniciada</string>
    <string name="btnTextAccept">Iniciar</string>
    <string name="text_1">¿No tienes cuenta?</string>
    <string name="registrar">Registrate</string>
    <string name="register_text">Bienvenido a</string>
    <string name="app_name_1">TicketGO</string>
    <string name="register_text_2">Crea una cuenta de forma fácil y sencilla</string>
    <string name="name">Luis Angel Martinez</string>
    <string name="name_text">Nombre</string>
    <string name="checkBox_register">Acepto los Términos y Condiciones y la Política de Privacidad</string>
    <string name="text_register">¿Ya tienes cuenta?</string>
    <string name="login">Inicia Sesión</string>
    <string name="copyright">Derechos reservados 2022</string>
    <string name="principal">Inicio</string>
    <string name="anadir_viaje">Nuevo viaje</string>
    <string name="menu_cerrar_sesion">Cerrar sesión</string>
    <string name="ver_viajes">Mis viajes</string>
    <string name="perfil">Mi perfil</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="title_click">Titulo</string>
    <string name="welcome_message">¡Hola Mauricio!</string>
    <string name="text_menu">Encuentra el viaje para tu siguiente destino.</string>
    <string name="infoViaje">Información del viaje</string>
    <string name="siguiente">Siguiente</string>
    <string name="cantDias">Cantidad de días:</string>
    <string name="cantBoletos">Cantidad de boletos:</string>
    <string name="encabezadoSeleccionAsientos">Selecciona tus asientos</string>
    <string name="infoSeleccionAsientos">Elige en cuál lugar tú y tus acompañantes disfrutarán su viaje</string>
    <string name="Disponibles">Disponibles</string>
    <string name="Ocupados">Ocupados</string>
    <string name="TuSeleccion">Tu selección</string>
    <string name="Avanzar">Avanzar</string>
    <string name="textNuevoViaje">Busca un viaje de tu agrado y añadelo a tus viajes.</string>
    <string name="volverInicio">Volver al inicio</string>
    <string name="tituloNuevoViaje">¡Selecciona un viaje de tu agrado!</string>
    <string name="destinoViaje">Destino</string>
    <string name="idViajeMostrar">ID del viaje</string>
    <string name="transporteV">Transporte</string>
    <string name="cantidadDias">Cantidad de días</string>
    <string name="cantidadBoletos">Cantidad de boletos</string>
    <string name="fechaV">Fecha</string>
    <string name="viaje">Viaje</string>
    <string name="ingNombre">Ingresa el nombre</string>
    <string name="ingCorreo">Ingresa el correo</string>
    <string name="ingTelefono">Ingresa el teléfono</string>
    <string name="ingDireccion">Ingresa la dirección</string>
    <string name="fechaBtn">Escoge una fecha</string>
    <string name="descuentoPagina">¡Ingresa un descuento!</string>
    <string name="precioActual">Precio actual</string>
    <string name="precioDescuento">Precio con descuento</string>
    <string name="tengoCodigo">Tengo un código</string>
    <string name="notengoCodigo">No tengo código</string>
    <string name="escanear">Escanear</string>
    <string name="confirmarCompra">Confirmar compra</string>
</resources>