<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/principal" />

        <item
            android:id="@+id/nav_crear_viaje"
            android:icon="@drawable/ic_baseline_add_box_24"
            android:title="@string/anadir_viaje" />

        <item
            android:id="@+id/nav_mis_viaje"
            android:icon="@drawable/ic_baseline_airplane_ticket_24"
            android:title="@string/ver_viajes" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/perfil" />
    </group>

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/menu_cerrar_sesion" />
    </group>

</menu>