<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRegister">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/darkgray"
            android:textSize="35sp"
            android:text="@string/register_text"/>
        <TextView
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textSize="35sp"
            android:textColor="@color/appcolor3"
            android:text="@string/app_name_1"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/register_text_2"/>

        <TextView
            android:layout_marginTop="30dp"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-black"
            android:textSize="15sp"
            android:text="@string/name_text"/>

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/margin_start"
            android:background="@drawable/borde_redondo"
            android:fontFamily="sans-serif"
            android:hint="@string/ingNombre"
            android:inputType="text"
            android:paddingStart="20dp" />
        <TextView
            android:layout_marginTop="15dp"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-black"
            android:textSize="15sp"
            android:text="@string/telefono"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_start"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:paddingBottom="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_lada_register"
                android:layout_marginTop="10dp"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:hint="@string/lada"
                android:padding="12dp"
                android:textColorHint="@color/black"
                android:fontFamily="sans-serif-black"
                android:background="@drawable/fondo_redondo"
                />

            <EditText
                android:id="@+id/edt_number_register"
                android:layout_marginTop="10dp"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/number"
                android:paddingStart="20dp"
                android:inputType="number"
                android:fontFamily="sans-serif"
                android:background="@drawable/borde_redondo"

                />
        </LinearLayout>

        <TextView
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-black"
            android:textSize="15sp"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/edt_password_regsiter"
            android:layout_marginTop="5dp"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_start"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:paddingStart="20dp"
            android:fontFamily="sans-serif"
            android:background="@drawable/borde_redondo"/>

        <CheckBox
            android:id="@+id/checkbox_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_start"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/checkBox_register" />

        <Button
            android:id="@+id/btn_accept_register"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin"
            android:background="@drawable/btnredondo"
            android:onClick="btnIniciar"
            android:text="@string/registrar"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_start"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_register"
                android:textSize="15sp"
                android:textColor="@color/appcolor3"
                android:fontFamily="sans-serif"
                android:background="@color/gray"
                />

            <Button
                android:id="@+id/btn_login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white_2"
                android:fontFamily="sans-serif"
                android:inputType="text"
                android:onClick="btnInicioSesion"
                android:text="@string/login"
                android:textColor="@color/appcolor3" />
        </LinearLayout>



    </LinearLayout>
</ScrollView>